--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./command/command.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="body">
     <!-- header -->
     <header class="header">
         <a href="./index.html">
@@ -29,23 +32,25 @@
        </header>
        <!-- Main content -->
        <main>
+        <h1 class="title-none">Portfolio</h1>
         <!-- Button Section  -->
         <section>
-            <ul>
+            <h2 class="title-none">Navigation pages</h2>
+            <ul class="list">
                 <li>
-                    <button type="button">All</button>
+                    <button class="button" type="button">All</button>
                 </li>
                 <li>
-                    <button type="button">Web Site</button>
+                    <button class="button" type="button">Web Site</button>
                 </li>
                 <li>
-                    <button type="button">App</button>
+                    <button class="button" type="button">App</button>
                 </li>
                 <li>
-                    <button type="button">Design</button>
+                    <button class="button" type="button">Design</button>
                 </li>
                 <li>
-                    <button type="button">Marketing</button>
+                    <button class="button" type="button">Marketing</button>
                 </li>
             </ul>
             
@@ -53,51 +58,52 @@
 
         <!-- Section 1 -->
         <section>
-            <ul>
+            <h2 class="title-none">Card portfolio</h2>
+            <ul class="list">
                 <li>
-                    <img src="./images/2pageimg1.jpg" alt="mobile app">
-                    <h3>Banking App Interface Concept</h3>
-                    <p>App</p>
+                    <img src="./images/2pageimg1.jpg" alt="mobile app" width="360" height="300">
+                    <h3 class="team title">Banking App Interface Concept</h3>
+                    <p class="team text">App</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg2.jpg" alt="text"> 
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="team title">Cashless Payment</h3>
+                    <p class="team text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/2pageimg3.jpg" alt="laptop and mobile app">
-                    <h3>Meditaion App</h3>
-                    <p>App</p>
+                    <img src="./images/2pageimg3.jpg" alt="laptop and mobile app" width="360" height="300">
+                    <h3 class="team title">Meditaion App</h3>
+                    <p class="team text">App</p>
                 </li>
                 <li>
-                    <img src="./images/2pageimg4.jpg" alt="car">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <img src="./images/2pageimg4.jpg" alt="car" width="360" height="300">
+            <h3 class="team title">Taxi Service</h3>
+                    <p class="team text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/2pageimg5.jpg" alt="mobile foto">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <img src="./images/2pageimg5.jpg" alt="mobile foto" width="360" height="300">
+            <h3 class="team title">Screen Illustrations</h3>
+                    <p class="team text">Design</p>
                 </li>
                 <li>
-                    <img src="./images/2pageimg6.jpg" alt="girl with mobile">
-                    <h3>Online Courses</h3>
-                    <p>Marketing/p>
+                    <img src="./images/2pageimg6.jpg" alt="girl with mobile" width="360" height="300">
+                    <h3 class="team title">Online Courses</h3>
+                    <p class="team text">Marketing<p>
                 </li>
                 <li>
-                    <img src="./images/2pageimg7.jpg" alt="Social stories">
-                    <h3>Instagram Stories Concept</h3>
-                    <p>Design</p>
+                    <img src="./images/2pageimg7.jpg" alt="Social stories" width="360" height="300">
+                    <h3 class="team title">Instagram Stories Concept</h3>
+                    <p class="team text">Design</p>
                 </li>
                 <li>
-                    <img src="./images/2pageimg8.jpg" alt="bag with food">
-                    <h3>Organic Food</h3>
-                    <p>Web Site</p>
+                    <img src="./images/2pageimg8.jpg" alt="bag with food" width="360" height="300">
+                    <h3 class="team title">Organic Food</h3>
+                    <p class="team text">Web Site</p>
                 </li>
                 <li>
-                    <img src="./images/2pageimg9.jpg" alt="cup with coffee">
-                    <h3>Fresh Coffee</h3>
-                    <p>Web Site</p>
+                    <img src="./images/2pageimg9.jpg" alt="cup with coffee" width="360" height="300">
+                    <h3 class="team title">Fresh Coffee</h3>
+                    <p class="team text">Web Site</p>
                 </li>
             </ul>
         </section>
