--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="body">
     <!-- header -->
     <header class="header">
-     <a href="./index.html">
+     <a class="logo" href="./index.html">
       <span class="web-logo">WEB</span>
       <span class="studio-logo">STUDIO</span>
      </a>
@@ -154,7 +154,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a href="#">
+      <a class="logo" href="./index.html">
         <span class="web-logo">WEB</span>
         <span class="secondary studio-logo">STUDIO</span>
        </a>
