--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body class="body">
     <!-- header -->
     <header class="header">
-        <a href="./index.html">
+        <a class="logo" href="./index.html">
          <span class="web-logo">WEB</span>
          <span class="studio-logo">STUDIO</span>
         </a>
@@ -32,10 +32,9 @@
        </header>
        <!-- Main content -->
        <main>
-        <h1 class="title-none">Portfolio</h1>
         <!-- Button Section  -->
         <section>
-            <h2 class="title-none">Navigation pages</h2>
+            <h1 class="title-none">Portfolio</h1>
             <ul class="list">
                 <li>
                     <button class="button" type="button">All</button>
@@ -56,62 +55,58 @@
             
         </section>
 
-        <!-- Section 1 -->
-        <section>
-            <h2 class="title-none">Card portfolio</h2>
             <ul class="list">
                 <li>
                     <img src="./images/2pageimg1.jpg" alt="mobile app" width="360" height="300">
-                    <h3 class="team title">Banking App Interface Concept</h3>
+                    <h2 class="team title">Banking App Interface Concept</h2>
                     <p class="team text">App</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg2.jpg" alt="text"> 
-                    <h3 class="team title">Cashless Payment</h3>
+                    <h2 class="team title">Cashless Payment</h2>
                     <p class="team text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg3.jpg" alt="laptop and mobile app" width="360" height="300">
-                    <h3 class="team title">Meditaion App</h3>
+                    <h2 class="team title">Meditaion App</h2>
                     <p class="team text">App</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg4.jpg" alt="car" width="360" height="300">
-            <h3 class="team title">Taxi Service</h3>
+            <h2 class="team title">Taxi Service</h2>
                     <p class="team text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg5.jpg" alt="mobile foto" width="360" height="300">
-            <h3 class="team title">Screen Illustrations</h3>
+            <h2 class="team title">Screen Illustrations</h2>
                     <p class="team text">Design</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg6.jpg" alt="girl with mobile" width="360" height="300">
-                    <h3 class="team title">Online Courses</h3>
+                    <h2 class="team title">Online Courses</h2>
                     <p class="team text">Marketing<p>
                 </li>
                 <li>
                     <img src="./images/2pageimg7.jpg" alt="Social stories" width="360" height="300">
-                    <h3 class="team title">Instagram Stories Concept</h3>
+                    <h2 class="team title">Instagram Stories Concept</h2>
                     <p class="team text">Design</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg8.jpg" alt="bag with food" width="360" height="300">
-                    <h3 class="team title">Organic Food</h3>
+                    <h2 class="team title">Organic Food</h2>
                     <p class="team text">Web Site</p>
                 </li>
                 <li>
                     <img src="./images/2pageimg9.jpg" alt="cup with coffee" width="360" height="300">
-                    <h3 class="team title">Fresh Coffee</h3>
+                    <h2 class="team title">Fresh Coffee</h2>
                     <p class="team text">Web Site</p>
                 </li>
             </ul>
-        </section>
 
        </main>
        <!-- Footer -->
     <footer class="footer">
-        <a href="#">
+        <a class="logo" href="./index.html">
           <span class="web-logo">WEB</span>
           <span class="secondary-studio-logo">STUDIO</span>
          </a>
